Changed keyword class to use static fields, and List.of()